--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="play">Play</string>
     <string name="questions">Questions</string>
     <string name="textview">textview</string>
+    <string name="button">Button</string>
+    <string name="add">Add</string>
 </resources>
